--- a/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_delete.html
@@ -1,20 +1,18 @@
-<div class="jumbotron">
-    <div class="row">
-        <div class="col-xs-12 text-center">
-            <h1>¿Eliminar?</h1>
-            <p class="text-muted">Ésto sólo desasocia la imágen del artículo, la imágen sigue disponible en la biblioteca.</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-2">
-        </div>
-        <div class="col-xs-8">
-            <form method="GET" action="{% url pictures-delete article_id=article_id %}">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger btn-block">Eliminar</button>
-            </form>
-        </div>
-        <div class="col-xs-2">
-        </div>
-    </div>
-</div>
+{% load fb_versions %}
+
+<form method="POST" action="{% url pictures-delete article_id=article_id %}">
+    {% csrf_token %}
+    <table class="table table-striped table-condensed">                
+        {% for picture in delete_page %}
+        <tr>
+            <td>{{ picture.name }}</td>
+            <td>
+                <a href="{{ picture.image }}" target="_blank"><img src="{% version picture.image.path 'fb_thumb' %}" title="{{picture.description}}" class="thumbnail"/></a>
+            </td>
+            <td>
+                <button class="btn btn-danger btn-xs" name="picture_id" value="{{picture.pk}}">Eliminar</button>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+</form>
