pretty fix for new article pictures widget, working with pagination own url, method and template for new article's pictures upload, sharing form template create, select and delete actions still to be fixed

--- a/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pagination_footer.html
@@ -23,7 +23,12 @@ $("#nPerPage").change(function(){
             });
         });
     {% elif widget == 'pictures' %}
-        url = "{% url pictures-new article_id=param %}"+query_str
+        {# param is article_id, absence means new article #}
+        {% if param %}
+            url = "{% url pictures-upload article_id=param %}"+query_str
+        {% else %}
+            url = "{% url pictures-new %}"+query_str
+        {% endif %}
         window.location.href = url // TODO just navigate while there's no ajax
     {% endif %}
 });
