--- a/cyclope/apps/media_widget/templates/media_widget/picture_select.html
+++ b/cyclope/apps/media_widget/templates/media_widget/picture_select.html
@@ -15,6 +15,8 @@
                 <button class="btn btn-primary btn-xs" name="picture_id" value="{{picture.pk}}">Seleccionar</button>
             </td>
         </tr>
+        {% empty %}
+            <p class="lead">No ha subido im&aacute;genes para seleccionar.</P>
         {% endfor %}
     </table>
 </form>
