existing article's pictures update and delete fixed new article still do nothing specific url match must go first

--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -16,7 +16,7 @@
                 });
             }            
             
-            {% if refresh_widget %}
+            {% if refresh_widget and article_id %}
                 media_widget_refresh({{article_id}});
             {% endif %}
         
