re-bind mediawidget button post Ajax jquery>1.7's 'on' binding solves immutable button

--- a/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
+++ b/cyclope/apps/media_widget/templates/media_widget/pictures_widget.html
@@ -14,7 +14,7 @@
                 url = type=="article_id" ? "/media_widget/pictures/widget/article/" : "/media_widget/pictures/widget/pictures/";
                 url += param;
                 $.get(url, function(data) {
-                    $("#media_widget_pictures", window.parent.document).html(data);
+                    $("#media_widget", window.parent.document).html(data);
                 });
             }
             function delete_pictures_refresh(pictures_list){
