--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -138,10 +138,6 @@ ul.media-list ul {margin-left:64px;}
 .staticpage .date,
 .article-teaser .date
 	{display:none; font-size: 1em; color: #337AB7; margin:15px 0 -15px 0;}
-#bottom .breadcrumb,
-#bottom .category_title,
-#bottom .collection_teaser {margin-left:15px;margin-right:15px;}
-
 
 
 #sidebar .collapse {display:block;}
@@ -332,3 +328,6 @@ span.category_title {display:block;font-size:24px;margin:0 0 10px;}
 .search_results h3 {border-bottom: 1px solid #999; padding-bottom: 5px;}
 .paginator {display: inline-block; width: 100%;margin-left: 10px;}
 .icon_list_container {margin-top: 20px;}
+
+.search-box .navbar-form {margin:0;padding:0;}
+.row {margin:0;margin-bottom:20px;}
