--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/main.html
@@ -3,14 +3,12 @@
 {% block body_class %}main{% endblock %}
 
 {% block page_content %}
-{# <div class="row">{% region 'left' %}</div> #}
-    <div class="col-xs-12 col-sm-9"> 
+  {# <div class="col-xs-3">{% region 'left' %}</div> #}
+   <div class="col-xs-12 col-sm-9"> 
         <div class="row">{% region 'top' %}</div>
-         <!-- toogle nav for different devices and resolutions -->
-        <div class= "toggle-botton-nav"><p class="pull-right visible-xs"><button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"> <span class="glyphicon glyphicon-menu-left"></span> {% trans "Toggle nav" %}</button></p></div> <!-- end toogle nav -->
-        {% block content %}{% endblock %}
+        <div class="row">{% block content %}{% endblock %}</div>
         <div class="row">{% region 'bottom' %}</div>
     </div>
-    <div class="row">{% region 'right'%}</div>
+    <div class="col-xs-12 col-sm-3">{% region 'right'%}</div>
 {% endblock %}
 
