base template standarization, clean

--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!--
 # CyclopeCMS GPL / http://cyclope.codigosur.org
-# Cyclope-Bootstrap Workflow Design
-# Version 1 / 2015-5-10
-# Copyright 2010-2015 CódigoSur Sociedad Civil / http://www.codigosur.org
-# Author San Hoerth / @SanHoerth
-# Please, view LICENSE.txt
+#
+# Copyright 2010-2016 CódigoSur Sociedad Civil / http://www.codigosur.org
+#
+# Cyclope is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
  -->
 
 {% load layout i18n cyclope_utils compress %}
@@ -40,95 +42,42 @@
     {% block cyclopecss %}
     <!-- Bootstrap Core CSS -->
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/cyclope.less" rel="stylesheet{% if not COMPRESS_ENABLED %}/less{% endif %}" type="text/less"/>
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-      <!-- <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"> -->
-      <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
     {% endblock cyclopecss %}
     {% endblock displaycss %}
     {% endcompress %}
-     <!-- /CSS -->
+    <!-- /CSS -->
      
     <!-- ### Cyclope-SiteSettings ### -->
     {% block sitesettings_css %}
     <style type="text/css">
-      @font-face {font-family: custom_body; src: url('{{ CYCLOPE_SITE_SETTINGS.body_custom_font }}');}
-      @font-face {font-family: custom_titles; src: url('{{ CYCLOPE_SITE_SETTINGS.titles_custom_font }}');}
-      {% if CYCLOPE_SITE_SETTINGS.titles_font %}
-      .brand h1, .title, .title a { font-family:{{ CYCLOPE_SITE_SETTINGS.titles_font  }}; }
-      {% endif %}
-      body { {% if CYCLOPE_SITE_SETTINGS.body_font %}
-             font-family: {{ CYCLOPE_SITE_SETTINGS.body_font }};
-             {% endif %}
-             font-size:{{ CYCLOPE_SITE_SETTINGS.font_size  }}px;}
-      {% if CYCLOPE_SITE_SETTINGS.hide_content_icons %} .type_icon { display: none;} {% endif %}
-       <script type="text/javascript">
-        less.modifyVars({
-            'color-alpha': '#fff',
-            'colora': '#{{ CYCLOPE_SITE_SETTINGS.color_a }}',
-            'colorb': '#{{ CYCLOPE_SITE_SETTINGS.color_b }}',
-            'colorc': '#{{ CYCLOPE_SITE_SETTINGS.color_c }}',
-            'colord': '#{{ CYCLOPE_SITE_SETTINGS.color_d }}',
-            'colore': '#{{ CYCLOPE_SITE_SETTINGS.color_e }}',
-            'color-omega':'#000'
-        });
-    </script>
-    <script type="text/javascript">
-    $(function() {
-        $('#gallery a').lightBox({
-            overlayBgColor:         '#000',
-            overlayOpacity:         0.8,
-            fixedNavigation:        false,
-            imageLoading:           '{{ CYCLOPE_STATIC_URL }}js/lightbox/images/lightbox-ico-loading.gif',
-            imageBtnPrev:           '{{ CYCLOPE_STATIC_URL }}js/lightbox/images/lightbox-btn-prev.gif',
-            imageBtnNext:           '{{ CYCLOPE_STATIC_URL }}js/lightbox/images/lightbox-btn-next.gif',
-            imageBtnClose:          '{{ CYCLOPE_STATIC_URL }}js/lightbox/images/lightbox-btn-close.gif',
-            imageBlank:             '{{ CYCLOPE_STATIC_URL }}js/lightbox/images/lightbox-blank.gif',
-            containerBorderSize:    10,
-            containerResizeSpeed:   400,
-            txtImage:               '{% trans "Image"%}',
-            txtOf:                  '{% trans "of"%}'
-        });
-    });
-    </script>
+        @font-face {font-family: custom_body; src: url('{{ CYCLOPE_SITE_SETTINGS.body_custom_font }}');}
+        @font-face {font-family: custom_titles; src: url('{{ CYCLOPE_SITE_SETTINGS.titles_custom_font }}');}
+        {% if CYCLOPE_SITE_SETTINGS.titles_font %}
+        .brand h1, .title, .title a { font-family:{{ CYCLOPE_SITE_SETTINGS.titles_font  }}; }
+        {% endif %}
+        body{
+            {% if CYCLOPE_SITE_SETTINGS.body_font %}
+                font-family: {{ CYCLOPE_SITE_SETTINGS.body_font }};
+            {% endif %}
+            font-size:{{ CYCLOPE_SITE_SETTINGS.font_size  }}px;
+        }
+        {% if CYCLOPE_SITE_SETTINGS.hide_content_icons %} .type_icon { display: none;} {% endif %}
     </style>
     {% endblock sitesettings_css %}
-  <!-- /Cyclope-SiteSettings -->  
-  
- <!-- ### JS ### -->
+    <!-- /Cyclope-SiteSettings -->  
 
-     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    {% block extra_head %}{% endblock %}
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    {% if not COMPRESS_ENABLED %}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less.min.js"></script>
-    {% endif %}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/cyclope.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/bootstrap.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/bootstrap.min.js"></script> 
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/dropdown.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/addons/jquery.smartmenus.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/addons/jquery.smartmenus.bootstrap.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/carousel.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/npm.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/offcanvas.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/lightbox/js/jquery.lightbox-0.5.pack.js"></script>
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/uni-form.jquery.min.js" ></script>
-    <script type="text/javascript" src="/media/cyclope/js/bootstrap/affix.js"></script>
-    {% if CYCLOPE_SITE_SETTINGS.enable_ratings %}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/ratings.js" ></script>
-    {% endif %}
-    <!-- /JS -->
-    {% block extra_head %}{% endblock %}
 </head>
 
 <body class="{% block body_class %}{%endblock%}" >
@@ -148,21 +97,21 @@
 
         <nav class="navbar {% if not CYCLOPE_SITE_SETTINGS.head_image %}navbar-fixed-top{% endif %} navbar-inverse" {% if CYCLOPE_SITE_SETTINGS.head_image %}data-spy="affix" data-offset-top="150"{% endif %}>
 			<div class="container">
-			<div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">{% trans 'Toggle navigation' %}</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                {% if CYCLOPE_SITE_SETTINGS.show_head_title  %}
-                    <a class="navbar-brand visible-xs" href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a>
-                {% endif %}
-            </div>
-            <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
-                <!-- header -->  {% region 'header' %} <!-- /header -->
-            </div>
-        </div><!-- /.container -->
+			    <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">{% trans 'Toggle navigation' %}</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    {% if CYCLOPE_SITE_SETTINGS.show_head_title  %}
+                        <a class="navbar-brand visible-xs" href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a>
+                    {% endif %}
+                </div>
+                <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                    <!-- header -->  {% region 'header' %} <!-- /header -->
+                </div>
+            </div><!-- /.container -->
         </nav><!-- /.navbar -->
 
         <div class="row">{% block page_content %} {% endblock %}</div>
@@ -185,12 +134,18 @@
 
     </div><!--/.container-->
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/bootstrap/bootstrap.min.js"></script> 
+    {% if not COMPRESS_ENABLED %}
+        <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less.min.js"></script>
+    {% endif %}
+    {% if CYCLOPE_SITE_SETTINGS.enable_ratings %}
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/ratings.js" ></script>
+    {% endif %}
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
