jquery moved to head for the proper functioning of clear search box

--- a/cyclope/templates/cyclope/site_search_box.html
+++ b/cyclope/templates/cyclope/site_search_box.html
@@ -21,6 +21,8 @@ $(function() {
 });
 </script>
 {% endblock %}
+{# TODO(sanhoerth): when all sites are migrating to bootstrap, can be upgraded with js/clearsearch.js, meanwhile, do not change #}
+
 
 
 
