--- a/cyclope/templates/cyclope/menu_menuitems_hierarchy_item_bootstrap.html
+++ b/cyclope/templates/cyclope/menu_menuitems_hierarchy_item_bootstrap.html
@@ -1,6 +1,5 @@
 <a href="{% if menu_item.custom_url %}{{menu_item.url}}{% else %}/{{CYCLOPE_PREFIX}}{{menu_item.url}}{% endif %}"
-{% if has_children == "has_children" %} class=" dropdown-toggle" data-toggle="dropdown" role="button"
-data-target="{% if menu_item.custom_url %}{{menu_item.url}}{% else %}/{{CYCLOPE_PREFIX}}{{menu_item.url}}{% endif %}"{% endif %}>
-{{ menu_item.name }}
-{% if has_children == "has_children" %}<span class="caret"></span>{% endif %}
+{% if has_children == "has_children" %} class=" dropdown-toggle" data-toggle="dropdown" role="button"{% endif %}>
+{{ menu_item.name }}{% if has_children == "has_children" %}<span class="caret"></span>{% endif %}
 </a>
+
