fixed css breadcrumb & icon_list_container

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -27,6 +27,7 @@ img.type_icon {display:inline;}
 .teaser_more {margin:5px 0 0;}
 .jumbotron .teaser_more {margin:30px 0 0;}
 .breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
+.breadcrumb {clear: both;}
 #block_content {overflow:auto;}
 .center-block { cursor: pointer; }
 .center-block { width: 100%; }
@@ -327,7 +328,7 @@ span.category_title {display:block;font-size:24px;margin:0 0 10px;}
 .form-group .controls label {padding:0 0 0 20px;}
 .search_results h3 {border-bottom: 1px solid #999; padding-bottom: 5px;}
 .paginator {display: inline-block; width: 100%;margin-left: 10px;}
-.icon_list_container {margin-top: 20px;}
+.icon_list_container {margin: 20px -15px 0;}
 
 .search-box .navbar-form {margin:0;padding:0;}
 .row {margin:0;margin-bottom:20px;}
