--- a/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
+++ b/cyclope/templates/cyclope/themes/cyclope-bootstrap/base.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <!--
 # CyclopeCMS GPL / http://cyclope.codigosur.org
-#
 # Copyright 2010-2016 CódigoSur Sociedad Civil / http://www.codigosur.org
-#
-# Cyclope is free software: you can redistribute it and/or modify
+# CyclopeCMS is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
